feat: implement core services, validation logic, and tournament query controller for match management